# mse-ophthalmology-imaging

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  train.yaml
docker/: Dockerfile
src/ophthalmology_imaging/tracking/: mlflow_tracker.py
src/ophthalmology_imaging/train/: train.py
src/ophthalmology_imaging/utils/: dirs_global.py  split_folder_grouped.py
src/utils/: ImageMaskDataset.py  dirs_global.py  seg_utils.py  split_folder_grouped.py  transforms_seg.py
tests/: smoke.py  test_smoke.py
