[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ophthalmology-imaging"
version = "0.1.0"
description = "Semantic segmentation project for ophthalmology imaging"
requires-python = ">=3.11"
dependencies = [
  "torch",
  "torchvision",
  "numpy",
  "pandas",
  "opencv-python",
  "pillow",
  "albumentations",
  "scikit-learn",
  "matplotlib",
  "pyyaml",
  "tqdm",
  "fastapi",
  "uvicorn",
  "mlflow",
  "wandb",
  "segmentation-models-pytorch",
  "torchmetrics",
  "mlflow-skinny>=3.12.0",
]

[dependency-groups]
dev = [
  "pytest",
  "pre-commit",
  "ipykernel",
  "dvc>=3.67.1",
  "ruff>=0.15.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ophthalmology_imaging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # import sorting
  "B",   # bugbear
  "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

